# Geometric-Art-Generator

./: CMakeLists.txt  README.md
include/: canvas.hpp  geometry.hpp  svg_utils.hpp
src/: geometry.cpp  main_transform.cpp  svg_utils.cpp
